# inquisitor

./: .gitignore  .mcp.json  AGENTS.md  LICENSE  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
docs/: companion-skills.md
docs/superpowers/specs/: 2025-07-07-inquisitor-design.md
hooks/: hooks.json  inquisitor-core.js
scripts/: release.sh
skills/inquisitor/: CORE.md  SKILL.md
src/inquisitor/: __init__.py  config.py  server.py
src/inquisitor/backend/: analyzer.py  extract.py  phase_tracker.py  search.py  tracer.py
src/inquisitor/tools/: analyze.py  phase.py  scaffold.py  search.py  trace.py  verify.py
tests/: test_analyze.py  test_extract.py  test_phase.py  test_search.py  test_security.py  test_smoke.py  test_trace.py
