[project]
name = "inquisitor"
version = "0.1.0"
description = "AI Agent investigation and research tool with Newton-method problem solving"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
    "trafilatura>=2.0.0",
    "readability-lxml>=0.8.0",
]

[project.scripts]
inquisitor-mcp = "inquisitor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/inquisitor"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
