[project]
name = "inquisitor-mcp"
version = "0.1.2"
description = "Optimal-path problem solving for AI agents — an MCP server for triage, web search, project analysis, code tracing, and Newton-method investigation."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "1111111111111111111114oLvT2" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "claude",
    "llm",
    "web-search",
    "problem-solving",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "ddgs>=9.0.0",
    "trafilatura>=2.0.0",
    "readability-lxml>=0.8.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
# High-fidelity PDF (complex tables, scanned/OCR) via docling. Heavy (pulls torch
# + ML models); only worth it with a GPU. Base install uses pypdf for text PDFs.
docling = ["docling>=2.0.0"]

[project.urls]
Homepage = "https://github.com/1111111111111111111114oLvT2/inquisitor"
Repository = "https://github.com/1111111111111111111114oLvT2/inquisitor"
Issues = "https://github.com/1111111111111111111114oLvT2/inquisitor/issues"

[project.scripts]
inquisitor-mcp = "inquisitor.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/inquisitor"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
